RESOLVED FIXED194053
BBQ-Air: Emit better code for switch
https://bugs.webkit.org/show_bug.cgi?id=194053
Summary BBQ-Air: Emit better code for switch
Saam Barati
Reported 2019-01-30 14:54:13 PST
...
Attachments
patch (4.12 KB, patch)
2019-02-09 16:55 PST, Saam Barati
no flags
patch (4.13 KB, patch)
2019-02-09 17:03 PST, Saam Barati
ysuzuki: review+
Saam Barati
Comment 1 2019-02-09 16:55:14 PST
EWS Watchlist
Comment 2 2019-02-09 17:00:12 PST
Attachment 361615 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/wasm/WasmAirIRGenerator.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2019-02-09 17:03:24 PST
Yusuke Suzuki
Comment 4 2019-02-09 23:18:03 PST
Comment on attachment 361616 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=361616&action=review r=me > Source/JavaScriptCore/wasm/WasmAirIRGenerator.cpp:1528 > unifyValuesWithBlock(expressionStack, targets[i]->resultForBranch()); Use `for (const ControlData& target : targets)` instead. > Source/JavaScriptCore/wasm/WasmAirIRGenerator.cpp:1539 > + for (size_t i = 0; i < targets.size(); ++i) Ditto. > Source/JavaScriptCore/wasm/WasmAirIRGenerator.cpp:1574 > + params.addLatePath([=] (CCallHelpers& jit) { Is WTFMove(caseJumps) & WTFMove(successorLabels) better?
Saam Barati
Comment 5 2019-02-10 19:26:24 PST
Thanks for the review. I addressed your comments. landed in: https://trac.webkit.org/changeset/241254/webkit
Radar WebKit Bug Importer
Comment 6 2019-02-10 19:27:28 PST
Note You need to log in before you can comment on or make changes to this bug.