BBQ-Air: Emit better code for switch https://bugs.webkit.org/show_bug.cgi?id=194053

Reviewed by Yusuke Suzuki.

Instead of emitting a linear set of jumps for Switch, this patch
makes the BBQ-Air backend emit a binary switch.

* wasm/WasmAirIRGenerator.cpp:
(JSC::Wasm::AirIRGenerator::addSwitch):



Canonical link: https://commits.webkit.org/208913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241254 268f45cc-cd09-0410-ab3c-d52691b4dbfc